prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/const_scope_2.diag.txt
ERROR: Unknown variable [x]
testData/diagnostics/const_scope_2.nut:5:6

print(x)
      ^


